Stop layout shift on videos (#1227)
* Stop layout shift on videos

* change code comment

* add comment for padding of 56.25%

* Revert "add comment for padding of 56.25%"

--- a/course-v2/assets/css/video.scss
+++ b/course-v2/assets/css/video.scss
@@ -151,6 +151,14 @@ a.video-download-button:visited {
   display: none !important;
 }
 
+//video element is replaced by VideoJS; set dimensions to prevent layout shift when VJS loads.
+.youtube-container > video {
+  height: 0;
+  max-width: 100%;
+  width: 100%;
+  padding-top: 56.25%; // apply aspect ratio padding of (9,16)
+}
+
 .video-tab-toggle-section {
   position: relative;
 }
